<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/button_seasonNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seasonNow"
                android:textColor="@color/black"
                android:backgroundTint="@color/white">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/button_season1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season1"
                android:textColor="@color/black"
                android:backgroundTint="@color/white">
            </Button>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <Button
                android:id="@+id/button_season2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/season2"
                android:textColor="@color/black"
                android:backgroundTint="@color/white">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">
            <Button
                android:id="@+id/button_season3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/season3"
                android:textColor="@color/black"
                android:backgroundTint="@color/white">
            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>