<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Game"
        android:textColor="@color/black"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/team1_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/laliga" />

            <TextView
                android:id="@+id/team1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/team1"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/team1_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/team1_logo" />

            <TextView
                android:id="@+id/Goals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/goals"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/numberGoalsFirstTeam"
                app:layout_constraintStart_toEndOf="@+id/team1_logo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/numberGoalsFirstTeam"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/numberGoalsFirstTeam"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toEndOf="@+id/team1_logo"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/x"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout1"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/team2_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ligapt"
                app:layout_constraintStart_toEndOf="@+id/Goals2" />

            <TextView
                android:id="@+id/team2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/team2"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/team2_logo"
                app:layout_constraintTop_toBottomOf="@+id/team2_logo" />

            <TextView
                android:id="@+id/Goals2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/goals"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/numberGoalsSecondTeam"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/numberGoalsSecondTeam"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/numberGoalsSecondTeam"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/Goals2"
                app:layout_constraintStart_toStartOf="@+id/Goals2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>